packages/asl-components/src/document-header/index.scss
.sticky-wrapper {
  position: relative; // needed to allow z-index to work
  height: 4 * $govuk-gutter; // height required otherwise get flicker on slow-scroll
  z-index: 1000;

  &.sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 0;

    .document-header {
      margin-bottom: 0;
    }
  }
}

.document-header {
  background-color: white;
  border-bottom: 4px solid $blue;
  margin-bottom: $govuk-gutter;
  padding: $govuk-gutter-half;
  overflow: auto;
  display: flex;
  flex-direction: row;

  .page-title {
    flex: 1;
    padding-right: $govuk-gutter-half;
    min-width: 0; /* allows text-overflow to work inside a flexbox element */

    h1 {
      font-size: 24px;
      font-weight: normal;
      margin-bottom: 5px;

      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }

    h2 {
      display: inline;
      font-size: 18px;
      font-weight: normal;
      margin-right: 1em;
    }

    a.toggle-details {
      font-size: 16px;
    }

    dl {
      margin-top: $govuk-gutter-half;
      font-size: 16px;
    }

    @include govuk-media-query($from: tablet) {
      dl {
        dt {
          float: left;
          margin-right: 2%;
          width: 28%;
        }

        dd {
          margin-left: 30%;
          margin-bottom: .8em;
        }

        dd::after {
          content: " ";
          display: block;
          clear: left;
        }
      }
    }
  }

  .back-link {
    border-left: 1px solid $mid-grey;
    padding: $govuk-gutter-half 0 0 $govuk-gutter-half;
  }

  .back-to-top {
    // remove standard back-to-top styling
    border: none;
    position: static;
    padding: 0;

    p {
      margin: 0;

      &:before {
        content: none;
      }
    }
  }
}

